# superbetting_commons

./: .gitignore  LICENSE  Logger.py  pyproject.toml  setup.py
superbettingcommons/: Logger.py
superbettingcommons/dto/: configurationdto.py  matchdto.py
superbettingcommons/dtos/: basedto.py  configurationdto.py  matchdto.py
superbettingcommons/dtos/dto888sport/: matchdto.py
superbettingcommons/google_spreadsheet_utilities/: spread_sheet_access.py  spread_sheet_url_manager.py  url_manager_base.py
superbettingcommons/utilities/: environment_utils.py  json_utils.py  telegram_emoji_converter.py
