[project]
name = "superbetting_commons"
version = "0.0.1"
authors = [
  { name="Giovanni M Martelli, Benzoni Thomas", email="giovanni.martlli1@gmail.com" },
]
description = "Superbetting Commons"
readme = "README.md"
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
"Homepage" = "https://github.com/superbetting/superbetting-commons"
"Bug Tracker" = "https://github.com/superbetting/superbetting-commons"